<resources>
    <string name="app_name">MyNotesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="button_used_to_create_new_note">Button used to create new Note</string>
    <string name="back_button">Back Button</string>
    <string name="save_button">Save Button</string>
    <string name="coming_soon"><font fgcolor="#000000">Coming Soon... </font></string>
    <string name="_0">0</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="brush">Brush</string>
    <string name="trash">Trash</string>
    <string name="exit">Exit</string>
    <string name="eurofins_notes">Eurofins Notes</string>
    <string name="settings">Settings</string>
    <string name="bottom_sheet_brush">Bottom sheet brush</string>
    <string name="restore">Restore</string>

</resources>