<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".CreateNoteFragment">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight_dp"
        android:contentDescription="@string/back_button"
        android:padding="@dimen/four_dp"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight_dp"
        android:contentDescription="@string/save_button"
        android:padding="@dimen/four_dp"
        android:src="@drawable/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginBottom="@dimen/eight_dp"
        android:background="@null"
        android:hint="@string/title"
        android:inputType="text"
        android:padding="@dimen/four_dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/twenty_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginBottom="@dimen/eight_dp"
        android:background="@null"
        android:hint="@string/description"
        android:padding="@dimen/four_dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/fourteen_sp"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageView
        android:id="@+id/bottom_sheet_drawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/white_brush"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/bottom_sheet_brush"/>


</androidx.constraintlayout.widget.ConstraintLayout>